--- a/src/css/index.css
+++ b/src/css/index.css
@@ -29,9 +29,8 @@ code {
   color: #F0C659;
   text-align: center;
 }
-
-div#soccerPage{
-  margin-left: 5%;
+#userMenu{
+  font-size: 200%;
 }
 
 .badge-warning#eventTextColor {
