Few Alterations in the navbar menu

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -29,8 +29,9 @@ code {
   color: #F0C659;
   text-align: center;
 }
-#userMenu{
+#collasible-nav-dropdown{
   font-size: 200%;
+  color: #F0C659;
 }
 
 .badge-warning#eventTextColor {
