--- a/src/css/index.css
+++ b/src/css/index.css
@@ -46,5 +46,27 @@ code {
 .userFrom{
   margin-left: 40%;
   margin-right: 40%;
+  background-color: floralwhite;
+  padding: 20px;
+  border-radius: 10px;
+}
+.card0 {
+  box-shadow: 0px 4px 8px 0px;
+  background-color: #F5F5F5;
+  border-radius: 5px;
+  padding: 10px;
 }
 
+.card0.label{
+  font-weight: bold;
+}
+.card2 {
+  margin: 0px 10px;
+  padding: 5px;
+}
+
+#loginLogo{
+  width: 50%;
+  padding: 20px;
+  margin-left: 25%;
+}
